...
    setIsError(false);
    try {
      const result = await requestDeadline(
        userApi.loginUser({
          email: username.trim().toLowerCase(),
          role: userRole,
          password,
        }),
      );
      if (!result?.ok) {
        setIsError(true);
        setStatusCode(result?.status ?? 0);
        setErrorMsg(result?.data?.message || errors.loginError);
...
        onPress={() => {
          if (Platform.OS !== 'web' || navigator.userAgent.includes('Mobile')) {
            Keyboard.dismiss();
          }
        }}
      >
        <View testID={'loginContentContainer'} style={styles.overlay}>
          <Center flex={1} style={styles.formContainer}>
            <View style={styles.credentialsContainer}>
              <View style={styles.logoContainer}>
                <Image
                  source={require('../assets/pear_v2.png')}
                  style={styles.logo}
                />
                <Text style={styles.tagLine}>PEAR</Text>
              </View>
              <View style={styles.inputContainer}>
                <InputField
                  testID="username"
                  autoCapitalize="none"
                  isRequired
                  showTitle={false}
                  title="Email"
                  value={username}
                  onChangeText={setUsername}
...
              </View>
              <View style={styles.buttonsContainer}>
                {isLoading ? (
                  <LoadingWheel />
                ) : (
                  <AppButton
                    title="Login"
                    color="green"
                    onPress={onPressLogin}
                    testID="login"
                    //isDisabled={isInputErrors} //for login button validation
                  />
                )}
              </View>
              <Box>
                {isError ? (
                  <ErrorMessage message={errorMsg} testID={'loginError'} />
                ) : null}
              </Box>
              <View>
                <Text
                  style={styles.forgotPassword}
                  onPress={() => navigation.navigate(routes.RESET_PASSWORD)}
                >
                  Forgot Password?
                </Text>
              </View>
            </View>
          </Center>
        </View>
      </TouchableWithoutFeedback>
...
